--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://uionly.github.io/redux-tollkit-new",
   "name": "redux-posts",
   "version": "0.1.0",
   "private": true,
@@ -19,11 +20,16 @@
     "react-simple-hook-modal": "^1.1.0",
     "youtube-api-search": "0.0.5"
   },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
